test/seq/cmdlists/invalid_freq.err
SyntaxError: Missing frequency unit
Line: 3, Column: 17
freq(10) = 200.0
                ^
